--- a/web profile/index.html
+++ b/web profile/index.html
@@ -32,7 +32,7 @@
               <a class="nav-link active" href="#about">About</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link active" href="#project">Project</a>
+              <a class="nav-link active" href="#projects">Projects</a>
             </li>
             <li class="nav-item">
               <a class="nav-link active" href="#contact">Contact</a>
